--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -126,7 +127,7 @@
 
         <section class="main__section section--mostseen">
 
-            <article class="mostseen__card">
+            <article data-aos="fade-up" class="mostseen__card">
                 <figure class="card__figure">
                     <img class="card__img" src="assets/img/crocker para casal.jpg" alt="">
                     <figcaption class="card__subtitle">pulseiras para casal</figcaption>
@@ -135,7 +136,7 @@
                 <a href="https://api.whatsapp.com/send?phone=55557185538434&text=oi,%20gostaria%20de%20fazer%20um%20pedido!" class="card__button">Compre o Seu</a>
             </article>
 
-            <article class="mostseen__card">
+            <article data-aos="fade-up" class="mostseen__card">
                 <figure class="card__figure">
                     <img class="card__img" src="assets/img/anel de olho grego.jpg" alt="">
                     <figcaption class="card__subtitle">Anél de olho grego</figcaption>
@@ -144,7 +145,7 @@
                 <a href="https://api.whatsapp.com/send?phone=55557185538434&text=oi,%20gostaria%20de%20fazer%20um%20pedido!" class="card__button">Compre o Seu</a>
             </article>
 
-            <article class="mostseen__card">
+            <article data-aos="fade-up" class="mostseen__card">
                 <figure class="card__figure">
                     <img class="card__img" src="assets/img/crocker com inicial.jpg" alt="">
                     <figcaption class="card__subtitle">pulseira com inicial</figcaption>
@@ -153,7 +154,7 @@
                 <a href="https://api.whatsapp.com/send?phone=55557185538434&text=oi,%20gostaria%20de%20fazer%20um%20pedido!" class="card__button">Compre o Seu</a>
             </article>
 
-            <article class="mostseen__card">
+            <article data-aos="fade-up" class="mostseen__card">
                 <figure class="card__figure">
                     <img class="card__img" src="assets/img/283950014_402375721845093_6805558278468498392_n.jpg" alt="">
                     <figcaption class="card__subtitle">colar preto e branco</figcaption>
@@ -172,6 +173,10 @@
     <script src="animation.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 
 </html>
